--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "apexcharts-clevision": "^3.28.3",
+    "autoprefixer": "10.4.5",
     "bootstrap": "~5.1.3",
     "boxicons": "~2.0.9",
     "highlight.js": "~9.17.1",
