--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test
 DB_USERNAME=root
 DB_PASSWORD=
 
