--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": "^8.2",
     "laravel/framework": "^11.0",
+    "laravel/jetstream": "^5.2",
     "laravel/tinker": "^2.9"
   },
   "require-dev": {
